# hackathoh-versailles

./: .env.example  .gitignore  README.md  ROUTING_EVOLUTION.md  conversation_memory.json  data.sqlite3  data.sqlite3-shm  data.sqlite3-wal  nginx.conf  package-lock.json  pyproject.toml  requirements.txt  test.py  test_intelligent_routing.py  test_queries.json
app/: db.py  db.sql  main.py  schema.py
docs/: INTELLIGENT_ROUTING.md  ROUTING_COMPARISON.md  SOLUTION_SUMMARY.md  TOOL_BASED_ROUTING.md
front-chat-versaille/: README.md  package-lock.json  package.json  vite.config.js
front-chat-versaille/components/: ChatInterface.vue
front-chat-versaille/src/: App.vue  route-data.json
front-chat-versaille/src/components/: ConversationSidebar.vue  MapDisplay.vue  MessageDisplay.vue  UserInput.vue
front-chat-versaille/src/router/: index.js
front-chat-versaille/src/views/: ChatView.vue
src/: agent.py  enhanced_planner.py  intelligent_router.py  prompts.py  query_planner.py  tool_based_router.py  utils.py
src/prompt_files/: chat.txt  eval.txt
src/tools/: schedule_scraper.py
src/tools/google/: __init__.py  __init__.py.py  crowd.py
src/tools/rag/: __init__.py  dual_rag_fusion.py  example_usage.py  pdf_to_pdfvector.py  rag_qa_mistral.py  rag_system.py  rag_tools.py  store_vectors.py
